wndproc is done, key state listening

--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClCompile Include="third_party\imgui\imgui_stdlib.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="render\menu.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="config\config.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\random.hpp">
@@ -171,6 +177,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="third_party\imgui\imgui_stdlib.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="render\menu.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="config\config.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
