--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj
@@ -156,11 +156,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cheat\cheat.cpp" />
+    <ClCompile Include="config\config.cpp" />
     <ClCompile Include="core\interfaces.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="core\hooks.cpp" />
     <ClCompile Include="log\log.cpp" />
     <ClCompile Include="memory\memory.cpp" />
+    <ClCompile Include="render\menu.cpp" />
     <ClCompile Include="render\render.cpp" />
     <ClCompile Include="third_party\imgui\imgui.cpp" />
     <ClCompile Include="third_party\imgui\imgui_draw.cpp" />
@@ -174,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cheat\cheat.hpp" />
+    <ClInclude Include="config\config.hpp" />
     <ClInclude Include="core\common.hpp" />
     <ClInclude Include="core\core.hpp" />
     <ClInclude Include="core\interfaces.hpp" />
@@ -186,6 +189,7 @@
     <ClInclude Include="offset\offset.hpp" />
     <ClInclude Include="offset\offsets.hpp" />
     <ClInclude Include="render\font.hpp" />
+    <ClInclude Include="render\menu.hpp" />
     <ClInclude Include="render\render.hpp" />
     <ClInclude Include="sdk\interfaces\iinputsystem.hpp" />
     <ClInclude Include="sdk\interfaces\iswapchaindx11.hpp" />
