--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="cheat\features\entity_var.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="sdk\datatypes\matrix.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\random.hpp">
