--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj
@@ -164,6 +164,7 @@ Normaliz.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDep
     <ClCompile Include="cheat\features\entity_var.cpp" />
     <ClCompile Include="cheat\features\esp.cpp" />
     <ClCompile Include="config\config.cpp" />
+    <ClCompile Include="core\core.cpp" />
     <ClCompile Include="core\interfaces.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="core\hooks.cpp" />
